--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Business Template</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
+
     <!-- Styles -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/compiled/bootstrap-overrides.css" type="text/css" />
@@ -12,15 +12,16 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
 
-    <link rel="stylesheet" href="css/compiled/index.css" type="text/css" media="screen" />    
-    <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection" />    
+    <link rel="stylesheet" href="css/compiled/index.css" type="text/css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection" />
+    <link rel="stylesheet" href="css/compiled/sign-up.css"/>
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 <body class="pull_top">
-    
+
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -36,86 +37,28 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">HOME</a></li>
-                    <li><a href="about-us.html">ABOUT US</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="features.html">Features</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="portfolio-item.html">Portfolio Item</a></li>
-                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                            <li><a href="sign-in.html">Sign in</a></li>
-                            <li><a href="sign-up.html">Sign up</a></li>
-                            <li><a href="backgrounds.html">Backgrounds</a></li>
-                        </ul>
+                    <li><a href="about-us.html">Explore</a></li>
+                    <li><a href="pricing.html">Add API</a></li>
+                    <li><a href="contact.html">About</a></li>
+                    <li>
+                      <a href="sign-in.html">
+                        My Account
+                      </a>
                     </li>
-                    <li><a href="pricing.html">PRICING</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="sign-up.html">Sign up</a></li>
-                    <li><a href="sign-in.html">Sign in</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <section id="feature_slider" class="lol">
-        <!-- 
-            Each slide is composed by <img> and .info
-            - .info's position is customized with css in index.css
-            - each <img> parallax effect is declared by the following params inside its class:
-            
-            example: class="asset left-472 sp600 t120 z3"
-            left-472 means left: -472px from the center
-            sp600 is speed transition
-            t120 is top to 120px
-            z3 is z-index to 3
-            Note: Maintain this order of params
-
-            For the backgrounds, you can combine from the bgs folder :D
-        -->
-        <article class="slide" id="showcasing" style="background: url('img/backgrounds/landscape.png') repeat-x top center;">
-            <img class="asset left-30 sp600 t120 z1" src="img/slides/scene1/macbook.png" />
-            <div class="info">
-                <h2>Beautiful theme for showcasing your works.</h2>
-            </div>
-        </article>
-        <article class="slide" id="ideas" style="background: url('img/backgrounds/aqua.jpg') repeat-x top center;">
-            <div class="info">
-                <h2>We love to turn ideas into beautiful things.</h2>
-            </div>
-            <img class="asset left-480 sp600 t260 z1" src="img/slides/scene2/left.png" />
-            <img class="asset left-210 sp600 t213 z2" src="img/slides/scene2/middle.png" />
-            <img class="asset left60 sp600 t260 z1" src="img/slides/scene2/right.png" />
-        </article>
-        <article class="slide" id="tour" style="background: url('img/backgrounds/color-splash.jpg') repeat-x top center;">
-            <img class="asset left-472 sp650 t210 z3" src="img/slides/scene3/ipad.png" />
-            <img class="asset left-365 sp600 t270 z4" src="img/slides/scene3/iphone.png" />
-            <img class="asset left-350 sp450 t135 z2" src="img/slides/scene3/desktop.png" />
-            <img class="asset left-185 sp550 t220 z1" src="img/slides/scene3/macbook.png" />
-            <div class="info">
-                <h2>Fully Responsive theme</h2>
-                <a href="features.html">TOUR THE PRODUCT</a>
-            </div>
-        </article>
-        <article class="slide" id="responsive" style="background: url('img/backgrounds/indigo.jpg') repeat-x top center;">
-            <img class="asset left-472 sp600 t120 z3" src="img/slides/scene4/html5.png" />
-            <img class="asset left-190 sp500 t120 z2" src="img/slides/scene4/css3.png" />
-            <div class="info">
-                <h2>
-                    Responsive <strong>HTML5 & CSS3</strong>
-                    Theme
-                </h2>                
-            </div>
-        </article>        
-    </section>
+    <!--here we go-->
+    <div id="sign_up1"></div>
+    <!--<img src="img/backgrounds/mango.jpg" alt=""/>-->
 
     <div id="showcase">
         <div class="container">
             <div class="section_header">
                 <h3>Our Services</h3>
-            </div>            
+            </div>
             <div class="row feature_wrapper">
                 <!-- Features Row -->
                 <div class="features_op1_row">
@@ -124,7 +67,7 @@
                         <div class="img_box">
                             <a href="services.html">
                                 <img src="img/service1.png">
-                                <span class="circle"> 
+                                <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
@@ -141,7 +84,7 @@
                         <div class="img_box">
                             <a href="services.html">
                                 <img src="img/service2.png">
-                                <span class="circle"> 
+                                <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
@@ -158,7 +101,7 @@
                         <div class="img_box">
                             <a href="services.html">
                                 <img src="img/service3.png">
-                                <span class="circle"> 
+                                <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
@@ -179,7 +122,7 @@
         <div class="container">
             <div class="section_header">
                 <h3>Features</h3>
-            </div> 
+            </div>
             <div class="row feature">
                 <div class="col-sm-6">
                     <img src="img/showcase1.png" class="img-responsive" />
@@ -206,7 +149,7 @@
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
                     </p>
-                </div>                
+                </div>
             </div>
             <div class="row feature">
                 <div class="col-sm-6">
@@ -240,8 +183,8 @@
                         <div class="wrapper">
                             <h3>Lite</h3>
                             <div class="price">
-                                <span class="dollar">$</span> 
-                                <span class="qty">35</span> 
+                                <span class="dollar">$</span>
+                                <span class="qty">35</span>
                                 <span class="month">/month</span>
                             </div>
                             <div class="features">
@@ -269,8 +212,8 @@
                             <img class="ribbon" src="img/badge.png">
                             <h3>Pro</h3>
                             <div class="price">
-                                <span class="dollar">$</span> 
-                                <span class="qty">99</span> 
+                                <span class="dollar">$</span>
+                                <span class="qty">99</span>
                                 <span class="month">/month</span>
                             </div>
                             <div class="features">
@@ -301,8 +244,8 @@
                         <div class="wrapper">
                             <h3>Standard</h3>
                             <div class="price">
-                                <span class="dollar">$</span> 
-                                <span class="qty">65</span> 
+                                <span class="dollar">$</span>
+                                <span class="qty">65</span>
                                 <span class="month">/month</span>
                             </div>
                             <div class="features">
@@ -460,7 +403,7 @@
                             © 2013 Clean Canvas. All rights reserved. Theme by Detail Canvas.
                         </div>
                     </div>
-                </div>            
+                </div>
             </div>
         </div>
     </footer>
@@ -470,6 +413,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
 
-    <script type="text/javascript" src="js/index-slider.js"></script>	
+    <script type="text/javascript" src="js/index-slider.js"></script>
 </body>
 </html>
