added the header section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><strong>CLEAN CANVAS</strong></a>
+                <a href="index.html" class="navbar-brand"><strong>API-Flow</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
@@ -50,9 +50,30 @@
         </div>
     </div>
 
-    <!--here we go-->
-    <div id="sign_up1"></div>
-    <!--<img src="img/backgrounds/mango.jpg" alt=""/>-->
+    <style>
+      #sign_up1 h2, #sign_up1 h3, #sign_up1 h1{
+        color: white;
+        text-align: center;
+      }
+    </style>
+
+    <div id="sign_up1">
+      <!-- todo dont make this so static -->
+      <div style="padding-top: 100px; width: 100%;"></div>
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <h2>
+          Are One Line Tag Line Here
+        </h2>
+        <br/>
+        <br/>
+        <h3>Create Your Own Flow</h3>
+        <span class="form-control" contenteditable="true">
+          hello
+        </span>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
 
     <div id="showcase">
         <div class="container">
@@ -396,11 +417,6 @@
                                 <span class="socialicons ico7"></span>
                                 <span class="socialicons_h ico7h"></span>
                             </a>
-                        </div>
-                    </div>
-                    <div class="row copyright">
-                        <div class="col-md-12">
-                            © 2013 Clean Canvas. All rights reserved. Theme by Detail Canvas.
                         </div>
                     </div>
                 </div>
