--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<title>Business Template</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,17 +21,16 @@
     <![endif]-->
 </head>
 <body class="pull_top">
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="bodyCtrl">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Toggle navigation </span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><strong>API-Flow</strong></a>
+                <a href="index.html" class="navbar-brand"><strong>API-Flow {{hello}}</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
@@ -145,6 +144,15 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script>
+      angular.module('app', []);
+      angular.module('app')
+      .controller('bodyCtrl', function($scope){
+        $scope.hello = "hello";
+      });
+    </script>
+
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
