--- a/index.html
+++ b/index.html
@@ -50,22 +50,29 @@
     </div>
 
     <div id="sign_up1">
+
+
       <!-- todo dont make this so static -->
       <div style="padding-top: 100px; width: 100%;"></div>
+
       <div class="col-md-3"></div>
       <div class="col-md-6">
         <h2>
-          Are One Line Tag Line Here
+          Our One Line Tag Line Here
         </h2>
         <br/>
         <br/>
         <h3>Create Your Own Flow</h3>
         <span class="form-control" contenteditable="true">
-          hello
         </span>
       </div>
       <div class="col-md-3"></div>
     </div>
+
+    <div ui-view></div>
+    <!-- We'll also add some navigation: -->
+    <a ui-sref="state1">State 1</a>
+    <a ui-sref="state2">State 2</a>
 
     <div id="features">
         <div class="container">
@@ -145,8 +152,12 @@
 
     <!-- Scripts -->
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script>
-      angular.module('app', []);
+      angular.module('app', ['ui.router']);
+    </script>
+    <script src="js/router.js"></script>
+    <script>
       angular.module('app')
       .controller('bodyCtrl', function($scope){
         $scope.hello = "hello";
