--- a/index.html
+++ b/index.html
@@ -30,20 +30,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><strong>API-Flow</strong></a>
+                <a ui-sref="home" class="navbar-brand"><strong>API-Flow</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a ui-sref="home">Home</a></li>
-                    <li><a ui-sref="explore">Explore</a></li>
-                    <li><a ui-sref="add">Add API</a></li>
-                    <li><a ui-sref="about">About</a></li>
-                    <li>
-                      <a ui-sref="account">
-                        My Account
-                      </a>
-                    </li>
+                <ul class="nav navbar-nav navbar-right" ng-controller="navCtrl">
+                    <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
+                    <li ui-sref-active="active"><a ui-sref="explore">Explore</a></li>
+                    <li ui-sref-active="active"><a ui-sref="add">Add API</a></li>
+                    <li ui-sref-active="active"><a ui-sref="about">About</a></li>
+                    <li ui-sref-active="active"><a ui-sref="account">My Account</a></li>
                 </ul>
             </div>
         </div>
@@ -51,8 +47,6 @@
 
     <!--content goes here-->
     <span ui-view></span>
-    <!--<a ui-sref="state1">State 1</a>-->
-    <!--<a ui-sref="state2">State 2</a>-->
 
     <!-- starts footer -->
     <footer id="footer">
@@ -87,6 +81,7 @@
       angular.module('app', ['ui.router']);
     </script>
     <script src="js/router.js"></script>
+    <script src="js/navCtrls.js"></script>
     <script>
       angular.module('app')
       .controller('bodyCtrl', function($scope){
