--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<title>Business Template</title>
+	<title>API-Flow</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -86,6 +86,7 @@
     </script>
     <script src="js/router.js"></script>
     <script src="js/navCtrls.js"></script>
+    <script src="js/service/TermCtrl.js"></script>
     <script src="js/directives/flow.js"></script>
     <script>
       angular.module('app')
