about to add suggestions

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <script src="js/router.js"></script>
     <script src="js/navCtrls.js"></script>
     <script src="js/service/TermCtrl.js"></script>
+    <!--<script scr="js/controller/flowCtrl.js"></script>-->
     <script src="js/directives/flow.js"></script>
     <script>
       angular.module('app')
