--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
-    <script src="bower_components/ui.bootstrap/src/modal/modal.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script>
       angular.module('app', ['ui.router', 'contenteditable', 'ui.bootstrap']);
     </script>
