have a decent version of explore

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script src="js/router.js"></script>
     <script src="js/navCtrls.js"></script>
     <script src="js/service/TermCtrl.js"></script>
+    <script src="js/controller/popularCtrl.js"></script>
     <script src="js/directives/flow.js"></script>
     <script>
       angular.module('app')
