--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
     <script src="bower_components/sweetalert/lib/sweet-alert.min.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
     <script type="text/javascript" src="js/index-slider.js"></script>
