--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
     <script src="bower_components/ui.bootstrap/src/modal/modal.js"></script>
     <script>
-      angular.module('app', ['ui.router', 'contenteditable', 'ui.bootstrap']);
+      angular.module('app', ['ui.router', 'contenteditable']);
     </script>
     <script src="js/router.js"></script>
     <script src="js/navCtrls.js"></script>
