--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/compiled/bootstrap-overrides.css" type="text/css" />
     <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css"/>
-    <link rel="stylesheet" type="text/css" href="css/compiled/theme.css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 
 
 
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="css/compiled/index.css" type="text/css" media="screen" />
     <!--<link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection" />-->
     <link rel="stylesheet" href="bower_components/animate.css/animate.css"/>
+  <link rel="stylesheet" type="text/css" href="css/compiled/theme.css" />
     <link rel="stylesheet" href="css/compiled/sign-up.css"/>
   <link rel="stylesheet" href="css/compiled/flow.css"/>
 
