added hide and showing of success with animations

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     <script src="js/service/TermCtrl.js"></script>
     <script src="js/controller/popularCtrl.js"></script>
     <script src="js/directives/flow.js"></script>
+    <script src="js/service/successData.js"></script>
+    <script src="js/controller/successCtrl.js"></script>
     <script>
       angular.module('app')
       .controller('bodyCtrl', function($scope){
