--- a/FacebookToDropbox.html
+++ b/FacebookToDropbox.html
@@ -5,8 +5,9 @@
 
     <script>
         function getLastFacebookPhoto(){
+            var facebookKey='CAACEdEose0cBAHzUFXSbF3ZACMLT3027l8BHbg7tX0mMI2ApMQKvaAd7oTgHY6q83ugZCAgXqCZAtCVS0acqLpiOcq1lAKIzQZCcvZCa6mZBvTgfUYlCbRabbKukRd6MH6xYNYhlqkwREx1CSrCJc7hTuwqUD7HAtEvZA80ZBi4hdKdTZATUGCJD9aWtrI3cITxAYzZBANxlUJ45Cu2ZAXzod4DA2NMtZA6BuhYZD'
             var xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("GET","https://graph.facebook.com/me/photos/uploaded?access_token=CAACEdEose0cBAPZCZBIlNQafr26iXVG7o5mIzVwimAAEFZCg9ZBLIifIMm2VhQjHw1v3RohqHFsIv2DuraV76w3zRvH3Ckyv61wZBRm0U8VAIoifcpWtT3ZAv9dJFPh9MqKQhFVPdWw0xRyPhwQPF9t891EwzNW17f9r9aR4bKPZAgKaUxJPVZCq7WPEHngZBTCZC7uuDXfTaCCdchOy6v1oZC0EZArG6eX39osZD&fields=source,name", false);
+            xmlHttp.open("GET","https://graph.facebook.com/me/photos/uploaded?access_token="+facebookKey+"&fields=source,name", false);
             xmlHttp.send(null);
             return JSON.parse(xmlHttp.responseText);
         }
@@ -23,7 +24,7 @@
             {
                 files: [{'url': source, 'filename': name + '.jpg'}],
                 success: function () {
-                    alert("Success! Photo saved to Dropbox.");
+                    window.location.href = "http://localhost:8000/#/home";
                 },
                 progress: function (progress) {
                 },
